syntax = "proto3";

package farmer.v1;

import "google/protobuf/timestamp.proto";

message Farmer {
  string id = 1;
  string full_name = 2;
  string email = 3;
  string phone = 4;
  google.protobuf.Timestamp registered_at = 5;
  bool verified = 6;
  google.protobuf.Timestamp updated_at = 7;
}

message FarmerProfileRequest {
  string id = 1;
}

message FarmerProfileResponse {
  Farmer farmer = 1;
}

message UpdateFarmerProfileRequest {
  string id = 1;
  optional string full_name = 2;
  optional string email = 3;
  optional string phone = 4;
}

message UpdateFarmerProfileResponse {
  string status = 1;
  string msg = 2;
}

service FarmerService {
  rpc FarmerProfile(FarmerProfileRequest) returns (FarmerProfileResponse);
  rpc UpdateFarmerProfile(UpdateFarmerProfileRequest) returns (UpdateFarmerProfileResponse);
}
